--- a/practica01css/css/estilos.css
+++ b/practica01css/css/estilos.css
@@ -45,3 +45,47 @@ header nav ul li {
     margin: -150px 0px 0px 0px;
     /* margin-top: -150px; */
 }
+
+#seccion1 {
+    margin-top: 15px;
+}
+
+#seccion1 article {
+    text-align: center;
+}
+
+#seccion1 article img {
+    border: 5px solid rgba(150, 150, 150, 0.5);
+    width: 98%;
+}
+
+#seccion2 article {
+    display: inline-block;
+    vertical-align: top;
+    width: 32.8%;
+}
+
+#seccion2 article img {
+    width: 100%;
+}
+
+#seccion2 article input[type="submit"] {
+    background-color: white;
+    color: rgb(33, 33, 255);
+    border: 1px solid gray;
+    border-radius: 5px;
+    padding: 5px 10px;
+    margin-left: 35%;
+}
+
+.nito {
+    font-weight: bold;
+}
+
+.unaSeccion {
+    font-size: 4.5em;
+}
+
+.otraSeccion {
+    font-size: 2.5em;
+}
